--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.7",
     "es6-promise": "^4.1.1",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
